<resources>
    <string name="app_name">ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="safe_secure_fast">Safe-Secure-Fast</string>
    <string name="next">Next</string>
    <string name="message_or_call_with_your_friends_n_become_more_safe_and_secure">Message or call with your friends\n become more safe and secure</string>
    <string name="log_in">Log In</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="welcome">Welcome!</string>
    <string name="create_an_account">Create an Account</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="upload_image">Upload image</string>
    <string name="this_is_my_message_that_will_wrap_into_multiple_lines_and_keep_on_going">This is my message that will wrap into multiple lines and keep on going</string>
</resources>