<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appcolor"
        tools:context="com.example.fragments.RegisterFragment">


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/backg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt"
            android:orientation="vertical">


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:paddingBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:focusable="true"
                            android:indeterminate="true"
                            android:indeterminateDrawable="@drawable/progress_bg"
                            android:progress="0"
                            android:visibility="invisible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.512"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.371" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upload_image"
                            android:layout_marginTop="5dp"
                            app:layout_constraintEnd_toEndOf="@+id/upimg"
                            app:layout_constraintStart_toStartOf="@+id/upimg"
                            app:layout_constraintTop_toBottomOf="@+id/upimg" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/upimg"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="20dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:src="@drawable/ic_account"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/upimg" />
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/namebt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="100dp"
                        android:background="@color/white"
                        android:hint="@string/enter_your_name"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt1" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/namebt" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/emailbt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="100dp"
                        android:background="@color/white"
                        android:hint="@string/enter_your_email"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="70dp"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/passbt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="100dp"
                        android:background="@color/white"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <TextView
                        android:id="@+id/cnftxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="70dp"
                        android:text="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/cnfbt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="100dp"
                        android:background="@color/white"
                        android:hint="@string/enter_password_again"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cnftxt" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/logbt"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="60dp"
                        android:backgroundTint="@color/appcolor"
                        android:text="@string/log_in"
                        app:cornerRadius="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cnfbt" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/appcolor"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@+id/logbt"
                        app:layout_constraintStart_toStartOf="@+id/logbt"
                        app:layout_constraintTop_toBottomOf="@+id/logbt" />

                    <TextView
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="LOG IN"
                        android:textColor="#D05DEA"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:clickable="true"
                        android:layout_marginBottom="10dp"
                        android:focusable="true"
                        android:layout_marginTop="20dp"
                        app:layout_constraintEnd_toEndOf="@+id/textView7"
                        app:layout_constraintStart_toStartOf="@+id/textView7"

                        app:layout_constraintTop_toBottomOf="@+id/textView7" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </ScrollView>




        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
